--- a/cubeIDE_ws/harurobo2024.ioc
+++ b/cubeIDE_ws/harurobo2024.ioc
@@ -162,8 +162,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=OmniPrac.ioc
-ProjectManager.ProjectName=OmniPrac
+ProjectManager.ProjectFileName=harurobo2024.ioc
+ProjectManager.ProjectName=harurobo2024
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -237,15 +237,12 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VCOSAIOutputFreq_Value=384000000
-SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.0=TIM1_CH1,Encoder_Interface
 SH.S_TIM1_CH1.ConfNb=1
-SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
+SH.S_TIM1_CH2.0=TIM1_CH2,Encoder_Interface
 SH.S_TIM1_CH2.ConfNb=1
-TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM1.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
-TIM1.Period=500
-TIM1.Prescaler=1
+TIM1.EncoderMode=TIM_ENCODERMODE_TI12
+TIM1.IPParameters=EncoderMode
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
