--- a/cubeIDE_ws/harurobo2024.ioc
+++ b/cubeIDE_ws/harurobo2024.ioc
@@ -41,37 +41,40 @@ Mcu.CPN=STM32F767ZIT6
 Mcu.Family=STM32F7
 Mcu.IP0=CAN1
 Mcu.IP1=CORTEX_M7
-Mcu.IP10=USB_OTG_FS
+Mcu.IP10=USB_DEVICE
+Mcu.IP11=USB_OTG_FS
 Mcu.IP2=DMA
 Mcu.IP3=FREERTOS
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
 Mcu.IP7=TIM1
-Mcu.IP8=USART3
-Mcu.IP9=USB_DEVICE
-Mcu.IPNb=11
+Mcu.IP8=TIM8
+Mcu.IP9=USART3
+Mcu.IPNb=12
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PH0/OSC_IN
 Mcu.Pin1=PH1/OSC_OUT
-Mcu.Pin10=PD0
-Mcu.Pin11=PD1
-Mcu.Pin12=PB7
-Mcu.Pin13=PB8
-Mcu.Pin14=PB9
-Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin16=VP_SYS_VS_tim2
-Mcu.Pin17=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin10=PA11
+Mcu.Pin11=PA12
+Mcu.Pin12=PD0
+Mcu.Pin13=PD1
+Mcu.Pin14=PB7
+Mcu.Pin15=PB8
+Mcu.Pin16=PB9
+Mcu.Pin17=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin18=VP_SYS_VS_tim2
+Mcu.Pin19=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin2=PE9
 Mcu.Pin3=PE11
 Mcu.Pin4=PB10
 Mcu.Pin5=PB11
 Mcu.Pin6=PD8
 Mcu.Pin7=PD9
-Mcu.Pin8=PA11
-Mcu.Pin9=PA12
-Mcu.PinsNb=18
+Mcu.Pin8=PC6
+Mcu.Pin9=PC7
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -125,6 +128,8 @@ PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=M22
 PB9.Locked=true
 PB9.Signal=GPIO_Output
+PC6.Signal=S_TIM8_CH1
+PC7.Signal=S_TIM8_CH2
 PD0.Mode=CAN_Activate
 PD0.Signal=CAN1_RX
 PD1.Mode=CAN_Activate
@@ -241,8 +246,14 @@ SH.S_TIM1_CH1.0=TIM1_CH1,Encoder_Interface
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,Encoder_Interface
 SH.S_TIM1_CH2.ConfNb=1
+SH.S_TIM8_CH1.0=TIM8_CH1,Encoder_Interface
+SH.S_TIM8_CH1.ConfNb=1
+SH.S_TIM8_CH2.0=TIM8_CH2,Encoder_Interface
+SH.S_TIM8_CH2.ConfNb=1
 TIM1.EncoderMode=TIM_ENCODERMODE_TI12
 TIM1.IPParameters=EncoderMode
+TIM8.EncoderMode=TIM_ENCODERMODE_TI12
+TIM8.IPParameters=EncoderMode
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
